--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://listblog.github.io/EmrickServices.The-Real-Threat-of-Flood-Damage-Mold-and-Mildew/">https://listblog.github.io/EmrickServices.The-Real-Threat-of-Flood-Damage-Mold-and-Mildew/</a><br>    
+                <a target="_bLank" href="https://emrickservices.s3.us-east-005.backblazeb2.com/The+Real+Threat+of+Flood+Damage:+Mold+and+Mildew/index.html">https://emrickservices.s3.us-east-005.backblazeb2.com/The+Real+Threat+of+Flood+Damage:+Mold+and+Mildew/index.html</a><br>
+                <a target="_bLank" href="https://emrick-services-the-real-th-git-6952f1-birchs-projects-9248c938.vercel.app/">https://emrick-services-the-real-th-git-6952f1-birchs-projects-9248c938.vercel.app/</a><br>
+                <a target="_bLank" href="https://resonant-belekoy-d76e52.netlify.app/">https://resonant-belekoy-d76e52.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
